tests/output/self_hosted/undef_var_error.txt
tests/undef_var_error.oomph:2: error: variable not found: my_ass

    print(my_ass)
          ^^^^^^

assert() failed in "self_hosted/error.oomph", line N
